--- a/RobotGuardBTStarter/Assembly-CSharp.csproj
+++ b/RobotGuardBTStarter/Assembly-CSharp.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Assets\Drive.cs" />
     <Compile Include="Assets\Droid\DestroyMe.cs" />
     <Compile Include="Assets\PandaBehaviour\Core\PandaBehaviour.cs" />
+    <None Include="Assets\BoatAI.BT.txt" />
     <None Include="Assets\Attack.BT.txt" />
     <None Include="Assets\Wander.BT.txt" />
     <None Include="Assets\Patrol.BT.txt" />
@@ -256,7 +257,7 @@
       <HintPath>C:/Program Files/Unity/Hub/Editor/2019.4.20f1/Editor/Data/Managed/UnityEditor.dll</HintPath>
     </Reference>
     <Reference Include="PandaBehaviour">
-      <HintPath>C:/Users/User/Downloads/RobotGuardian-main/RobotGuardian-main/RobotGuardBTStarter/Assets/PandaBehaviour/Core/PandaBehaviour.dll</HintPath>
+      <HintPath>C:/Users/User/Documents/GitHub/Robot/RobotGuardBTStarter/Assets/PandaBehaviour/Core/PandaBehaviour.dll</HintPath>
     </Reference>
     <Reference Include="netstandard">
       <HintPath>C:/Program Files/Unity/Hub/Editor/2019.4.20f1/Editor/Data/NetStandard/ref/2.0.0/netstandard.dll</HintPath>
@@ -604,31 +605,31 @@
       <HintPath>C:/Program Files/Unity/Hub/Editor/2019.4.20f1/Editor/Data/NetStandard/compat/2.0.0/shims/netfx/System.Xml.Serialization.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Timeline.Editor">
-      <HintPath>C:/Users/User/Downloads/RobotGuardian-main/RobotGuardian-main/RobotGuardBTStarter/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
+      <HintPath>C:/Users/User/Documents/GitHub/Robot/RobotGuardBTStarter/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.VSCode.Editor">
-      <HintPath>C:/Users/User/Downloads/RobotGuardian-main/RobotGuardian-main/RobotGuardBTStarter/Library/ScriptAssemblies/Unity.VSCode.Editor.dll</HintPath>
+      <HintPath>C:/Users/User/Documents/GitHub/Robot/RobotGuardBTStarter/Library/ScriptAssemblies/Unity.VSCode.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TextMeshPro.Editor">
-      <HintPath>C:/Users/User/Downloads/RobotGuardian-main/RobotGuardian-main/RobotGuardBTStarter/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
+      <HintPath>C:/Users/User/Documents/GitHub/Robot/RobotGuardBTStarter/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.UI">
-      <HintPath>C:/Users/User/Downloads/RobotGuardian-main/RobotGuardian-main/RobotGuardBTStarter/Library/ScriptAssemblies/UnityEngine.UI.dll</HintPath>
+      <HintPath>C:/Users/User/Documents/GitHub/Robot/RobotGuardBTStarter/Library/ScriptAssemblies/UnityEngine.UI.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Timeline">
-      <HintPath>C:/Users/User/Downloads/RobotGuardian-main/RobotGuardian-main/RobotGuardBTStarter/Library/ScriptAssemblies/Unity.Timeline.dll</HintPath>
+      <HintPath>C:/Users/User/Documents/GitHub/Robot/RobotGuardBTStarter/Library/ScriptAssemblies/Unity.Timeline.dll</HintPath>
     </Reference>
     <Reference Include="Unity.CollabProxy.Editor">
-      <HintPath>C:/Users/User/Downloads/RobotGuardian-main/RobotGuardian-main/RobotGuardBTStarter/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll</HintPath>
+      <HintPath>C:/Users/User/Documents/GitHub/Robot/RobotGuardBTStarter/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Rider.Editor">
-      <HintPath>C:/Users/User/Downloads/RobotGuardian-main/RobotGuardian-main/RobotGuardBTStarter/Library/ScriptAssemblies/Unity.Rider.Editor.dll</HintPath>
+      <HintPath>C:/Users/User/Documents/GitHub/Robot/RobotGuardBTStarter/Library/ScriptAssemblies/Unity.Rider.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TextMeshPro">
-      <HintPath>C:/Users/User/Downloads/RobotGuardian-main/RobotGuardian-main/RobotGuardBTStarter/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
+      <HintPath>C:/Users/User/Documents/GitHub/Robot/RobotGuardBTStarter/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
     </Reference>
     <Reference Include="UnityEditor.UI">
-      <HintPath>C:/Users/User/Downloads/RobotGuardian-main/RobotGuardian-main/RobotGuardBTStarter/Library/ScriptAssemblies/UnityEditor.UI.dll</HintPath>
+      <HintPath>C:/Users/User/Documents/GitHub/Robot/RobotGuardBTStarter/Library/ScriptAssemblies/UnityEditor.UI.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup></ItemGroup>
